# ratingskit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ratingskit/: __init__.py  base.py  calibration.py  modifiers.py
src/ratingskit/systems/: __init__.py  elo.py  glicko2.py
tests/: test_base.py  test_calibration.py
tests/systems/: test_elo.py  test_glicko2.py
