[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratingskit"
version = "0.0.1"
description = "A unified, composable Python library for sports and competitive rating systems."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Corbin" }]
keywords = ["elo", "glicko", "trueskill", "ratings", "sports", "ranking", "massey", "colley"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/USERNAME/ratingskit"
Repository = "https://github.com/USERNAME/ratingskit"
Issues = "https://github.com/USERNAME/ratingskit/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.11",
    "ruff>=0.6",
    "pandas-stubs",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ratingskit"]

[tool.hatch.build.targets.sdist]
include = ["src/ratingskit", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "PT",               # pytest
    "PL",               # pylint
    "TCH",              # type-checking blocks
    "RET",              # return
    "ARG",              # unused arguments
    "PTH",              # use pathlib
    "ERA",              # eradicate commented-out code
    "ANN",              # type annotations
]
ignore = [
    "PLR0913",  # too many arguments (rating systems have legitimate parameters)
    "ANN401",   # allow Any in *args/**kwargs
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "PLR2004"]  # tests can skip annotations and magic numbers

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ratingskit",
    "--cov-report=term-missing",
]
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/ratingskit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",
]
